重构了项目日志框架，新增发送Html邮件接口
